add must hold block setting fix mutability on deserialization of hotbar setting cleanup